--- a/devspace/buildspec.yml
+++ b/devspace/buildspec.yml
@@ -9,7 +9,8 @@ phases:
     commands:
     - echo Build started on `date`
     - echo Building the Docker image...
-    - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG -f $DOCKERFILE .
+    - echo "docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG $BUILD_ARGS -f $DOCKERFILE ."
+    - eval $(echo "docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG $BUILD_ARGS -f $DOCKERFILE .")
     - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
   post_build:
     commands:
