--- a/devspace/devspaces.yml
+++ b/devspace/devspaces.yml
@@ -1,6 +1,6 @@
 --- # devspaces.yml
-name: RubyDemo04090941
-description: Ruby demoApr09
+name: ruby-demo
+description: Ruby Demonstration. Run /data/start.sh to start the app.
 icon-file: ruby-on-rails-128.png
 
 # If you want to use a different Dockerfile for your DevSpace, provide the path
