--- a/devspace/devspaces.yml
+++ b/devspace/devspaces.yml
@@ -17,6 +17,9 @@ ports:
   - protocol: http # can be udp|tcp|http
     port-number: 3000
     description: web app http port
+  - protocol: tcp
+    port-number: 3306
+    description: mysql port
 
 #
 # Any environment variable specified here is injected into the build and/or
