Added DevSpace with VS Code-Server support
    - created a new DevSpace configuration that has VS code-server
      (https://github.com/cdr/code-server) installed. This allows
      code editing directly from the browser

 * other changes
    - updated Dockerfile to use ruby version 2.6.2 to match the version
      specificed in Gemfile

--- a/devspace/Dockerfile
+++ b/devspace/Dockerfile
@@ -1,6 +1,6 @@
-# DOCKER FILE 
+# DOCKER FILE
 
-FROM ruby:latest
+FROM ruby:2.6.2
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update \
 && apt-get install -y mysql-server mysql-client default-libmysqlclient-dev vim nodejs --no-install-recommends \
