--- a/devspace/Dockerfile
+++ b/devspace/Dockerfile
@@ -6,15 +6,16 @@ RUN apt-get update \
 && apt-get install -y mysql-server mysql-client default-libmysqlclient-dev vim nodejs --no-install-recommends \
 && apt-get clean \
 && sed -i -e 's/bind-address/#bind-address/g' /etc/mysql/mariadb.conf.d/50-server.cnf \
+&& sed -i 's/datadir.*/datadir        = \/data\/.mysql_data/g' /etc/mysql/mariadb.conf.d/50-server.cnf \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-COPY  open-remote-connections.sql /tmp
+COPY open-remote-connections.sql /tmp
+COPY entrypoint.sh /usr/local/bin/
 
-# This Dockerfile doesn't need to have an entrypoint and a command
-# as Bitbucket Pipelines will overwrite it with a bash script.
+RUN gem install rails -v '5.2.2' \
+  && chmod +x /usr/local/bin/entrypoint.sh
 
-RUN gem install rails -v '5.2.2'
+WORKDIR /data
 
-CMD /etc/init.d/mysql start \
-&& mysql < /tmp/open-remote-connections.sql \
-&& tail -f /dev/null
+ENTRYPOINT ["entrypoint.sh"]
+CMD tail -f /dev/null
